tup/parse/testdata/error/output/type_declarations.tup
# missing type body
expecting "tuple type", got "" at row 1, col 13

# unclosed tuple type
expecting "labeled tuple type member", got "" at row 1, col 24

# union type missing variant after pipe
expecting "union member", got "" at row 1, col 28
